force-app/main/default/objects/OrgProcessor__c/OrgProcessor__c.object-meta.xml
<CustomObject>
    <description>Organization Processor information retrieved during polling for the org search functionality</description>
    <label>OrgProcessor</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgProcessors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>