force-app/main/default/objects/OrgProcessor__c/fields/NextJobStart__c.field-meta.xml
<CustomField>
    <fullName>NextJobStart__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The next time a job is scheduled to run</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NextJobStart</label>
    <type>DateTime</type>
</CustomField>