force-app/main/default/objects/OrgProcessor__c/fields/ProcessorId__c.field-meta.xml
<CustomField>
    <fullName>ProcessorId__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Processor Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ProcessorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>