force-app/main/default/objects/OrgProcessor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessorName__c</columns>
    <columns>ProcessorStatus__c</columns>
    <columns>NextJobStart__c</columns>
    <columns>OrgInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>